[package]
name = "rust-http"
version = "0.1.0"
authors = ["Benjamin Sproule <benjamin.sproule@bmigroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rusqlite = { version = "0.30.0", features = ["bundled"] }

[dev-dependencies]
mockall = "0.8.3"
